[package]
name = "lnshot"
version = "0.1.2"
repository = "https://github.com/ticky/lnshot"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
clap = { version = "4.4", features = ["derive"] }
directories = "5.0"
keyvalues-serde = "0.1"
lazy_static = "1.4"
notify-debouncer-mini = "0.4"
path-matchers = "1.0"
serde = { version = "1.0", features = ["derive"] }
steamid-ng = "1.0"
steamlocate = { version = "1.2", features = ["shortcuts_extras"] }
steamy-vdf = "0.2"
symlink = "0.1"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.0.7"
# The preferred Rust toolchain to use in CI (rustup toolchain syntax)
rust-toolchain-version = "1.67.1"
# CI backends to support (see 'cargo dist generate-ci')
ci = ["github"]
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-pc-windows-msvc", "aarch64-apple-darwin"]
