[package]
name = "lnshot"
version = "0.1.3"
repository = "https://github.com/ticky/lnshot"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
clap = { version = "4.5", features = ["derive"] }
directories = "6.0"
keyvalues-serde = "0.2"
lazy_static = "1.5"
notify-debouncer-mini = "0.6"
path-matchers = "1.0"
serde = { version = "1.0", features = ["derive"] }
steamid-ng = "2.0"
steamlocate = { version = "1.2", features = ["shortcuts_extras"] }
steamy-vdf = "0.2"
symlink = "0.1"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
